made an adaptive

--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
         <a href="#" class="nav-link">galerie</a>
         <a href="#" class="nav-link">events</a>
         <a href="#" class="nav-link">contact</a>
+        
+        <select class="humburger--menu select__burger" aria-label="Бургер меню">
+          <option value="1" class="strip__burger">home</option>
+          <option value="1" class="strip__burger">about</option>
+          <option value="1" class="strip__burger">team</option>
+          <option value="1" class="strip__burger">booking</option>
+          <option value="1" class="strip__burger">menu</option>
+          <option value="1" class="strip__burger">galerie</option>
+          <option value="1" class="strip__burger">events</option>
+          <option value="1" class="strip__burger">contact</option>
+        </select>
       </nav>
+
+      
       <!-- /.container navigation -->
     </header>
     <!-- /.header -->
@@ -86,7 +99,7 @@
             </p>
           </div>
           <div class="block-img us__mob__img">
-            <img src="./img/AboutUs.webp" alt="ass" />
+            <img class="img__us" src="./img/AboutUs.webp" alt="ass" />
           </div>
         </div>
       </div>
@@ -99,7 +112,7 @@
         <h3 class="our-team__text">OUR TEAM</h3>
         <div class="container__block">
           <div class="block-img__right mob__our">
-            <img src="./img/masterchef.webp" alt="ass" />
+            <img class="img__us" src="./img/masterchef.webp" alt="ass" />
           </div>
           <div class="section__text our__text">
             <h2 class="section-title title title-our">MASTER CHEF</h2>
@@ -159,7 +172,7 @@
           </form>
         </div>
         <div class="block-img time__mob">
-          <img src="./img/about-img.webp" alt="ass" />
+          <img class="img__us" src="./img/about-img.webp" alt="ass" />
         </div>
       </div>
       <p class="time-working">
@@ -175,7 +188,7 @@
         <h3 class="specialties__text">specialties</h3>
         <div class="container__block">
           <div class="block-img__right ice__mob">
-            <img src="./img/ice.webp" alt="ass" />
+            <img class="img__us" src="./img/ice.webp" alt="ass" />
           </div>
           <div class="section__text mob__spec">
             <h2 class="section-title title title-our">chocolate pancakes</h2>
